# Hexa5Camera

./: Dockerfile  README.md
JoystickIdentifier/: CMakeLists.txt  LICENSE  README.md  docker-compose.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  run-docker.sh  signalhandler.cpp  signalhandler.h
JoystickIdentifier/QJoysticks/examples/JoystickList/: Makefile  moc_QJoysticks.cpp  moc_SDL_Joysticks.cpp  moc_VirtualJoystick.cpp  qrc_qjoysticks-res.cpp
JoystickIdentifier/QJoysticks/src/: QJoysticks.cpp
JoystickIdentifier/VideoReceiver/: CMakeLists.txt  VideoReceiver.cpp  VideoReceiver.h
JoystickIdentifier/VideoRecorderApp/: VideoRecorderWidget.cpp  VideoRecorderWidget.h
JoystickIdentifier/deploy/docker/: Dockerfile-build-ubuntu
JoystickIdentifier/tools/setup/: install-qt.sh
QJoysticks/: CMakeLists.txt
QJoysticks/examples/JoystickList/: JoystickList Example  qrc_qml.cpp
